--- a/home.html
+++ b/home.html
@@ -109,7 +109,7 @@ $('#next').click(function(){
               <h3 class="card-title">Career Opportunities And Resources</h3>
                   <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn  mr-2 "><i class="fas fa-link text text-centre"></i> Visit Site</a>
+              <a href="" class="btn  mr-2 "><i class="fas fa-link text text-centre"></i> Visit Site</a>
              
             </div>
             </div>
@@ -125,7 +125,7 @@ $('#next').click(function(){
                     <h3 class="card-title">Services</h3>
                         <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn mr-2"><i class="fas fa-link"></i> Visit Site</a>
+                    <a href="services.php" class="btn mr-2"><i class="fas fa-link"></i> Visit Site</a>
                    
                   </div>
                   </div>
