--- a/health1.html
+++ b/health1.html
@@ -9,21 +9,24 @@
 </head>
 <body>
     <nav id="navbar">
-        <div id="'logo">
-         <img src='logowomen.jpg' alt="yum yum">
-        </div>
+        
 <ul>
-    <li class="item"><A HREF="#">HOME</A></li>
-    <li class="item"><A HREF="#">SERVICES</A></li>
+    <li class="item"><A HREF="home.html">HOME</A></li>
+    <li class="item"><A HREF="service-menu.html">SERVICES</A></li>
     <li class="item"><A HREF="#">ABOUT US</A></li>
     <li class="item"><A HREF="#">CONTACT US</A></li>
 </ul>
 
     </nav>
     <section id="home">
-        <h1 class="primary">WE CARE FOR YOU!!</h1>
-
-        <h1 class="primary">FOR YOUR HEALTHY MENSTRUAL</h1>
+		<div class="logo" >
+        
+			<img src="hackathon-website.png" width="400px" height="400px" 
+			style="position: relative;left: 100px; ">
+			
+			<h2 style="position: relative; left:100px">Menstrual Health</h2>
+	
+			</div>
     </section>
     <section class="services-container">
         <h1 class="primary center">BEST DOCTORS FOR YOU!!</h1>
