--- a/service-menu.html
+++ b/service-menu.html
@@ -109,7 +109,7 @@ $('#next').click(function(){
               <h3 class="card-title"> Get A Meal Cooked</h3>
                   <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
               <p class="card-text"></p>
-              <a href="" class="btn  mr-2 "><i class="fas fa-link text text-centre"></i> Visit Site</a>
+              <a href="services2.php" class="btn  mr-2 "><i class="fas fa-link text text-centre"></i> Visit Site</a>
              
             </div>
             </div>
