--- a/service-menu.html
+++ b/service-menu.html
@@ -112,7 +112,7 @@ $('#next').click(function(){
                     <h3 class="card-title">Tech Tutors</h3>
                         <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                     <p class="card-text"></p>
-                    <a href="service-menu.html" class="btn mr-2"><i class="fas fa-link"></i> Visit Site</a>
+                    <a href="services3.php" class="btn mr-2"><i class="fas fa-link"></i> Visit Site</a>
                    
                   </div>
                   </div>
