--- a/bot.html
+++ b/bot.html
@@ -173,6 +173,7 @@ body .card .send .circle i {
   ["boring"],
   ["im tired"],
   ["i am feeling nervous"]
+  ["i am feeling worthless"]
 ];
 const botReply = [
   ["Hello!", "Hi!", "Hey!", "Hi there!"],
@@ -210,7 +211,8 @@ const botReply = [
   ["Say something interesting"],
   ["Sorry for that. Let's chat!"],
   ["Take some rest, Dude!"],
-  ["relax,it will be fine"]
+  ["relax,it will be fine"],
+  ["you are not. you just need to level up your self esteem. Talk to someone who loved you selflessly."]
 ];
 
 const alternative = [
