--- a/army1.html
+++ b/army1.html
@@ -478,6 +478,7 @@ $('#next').click(function(){
                     <a href="https://www.safalta.com/blog/upsc-nda-syllabus">NDA Syllabus</a><br>
                     <a href="https://www.safalta.com/blog/upsc-nda-eligibility">NDA Eligibility Criteria</a><br>
                     <a href ="https://www.safalta.com/blog/upsc-nda-cut-off">NDA Cutoff</a>
+                    <a href="https://dcg-academy.com/nda-coaching.html?gclid=CjwKCAjwrpOiBhBVEiwA_473dGacNbjtV1ffEFP-HUsl4-lEyZSQxLa0fd-GZ7t6K31dxgfruEI6ZRoC94sQAvD_BwE">DCG Defence Academy</a>
                   </p>
                 </div>
               </div>
