--- a/bot.html
+++ b/bot.html
@@ -4,152 +4,152 @@
     <title>Create Your Own Chatbot</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="sty.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700,300">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.1.2/css/material-design-iconic-font.min.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400&family=Finger+Paint&display=swap">
   </head>
   <style>
-    * {
-  font-size: 1.3vw;
-  font-family: "Epilogue", sans-serif;
-}
-
-html {
-  --scrollbarBG: #fff;
-  --thumbBG: #90a4ae;
-}
-
-body {
-  background: #ccc;
-}
-body .card {
-  height: 45vw;
-  width: 35vw;
-  background-color: white;
-  margin-left: 30vw;
-  margin-top: 5vw;
-  box-shadow: 2vw 2vw 12vw 3vw #ccc;
-}
-body .card #header {
-  height: 5vw;
-  background: #000;
-  padding: 0vw;
-}
-body .card #header h1 {
-  color: #fff;
-  font-size: 2vw;
-  font-family: "Finger Paint", cursive;
-  padding: 1vw;
-}
-body .card #message-section::-webkit-scrollbar {
-  width: 10px;
-}
-body .card #message-section {
-  height: 32vw;
-  padding: 0 2.5vw;
-  overflow-y: auto;
-  scrollbar-width: thin;
-  scrollbar-color: var(--thumbBG) var(--scrollbarBG);
-}
-body .card #message-section::-webkit-scrollbar-track {
-  background: var(--scrollbarBG);
-}
-body .card #message-section::-webkit-scrollbar-thumb {
-  background-color: var(--thumbBG);
-  border-radius: 6px;
-  border: 3px solid var(--scrollbarBG);
-}
-body .card #message-section #bot,
-body .card #message-section #user {
-  position: relative;
-  bottom: 0;
-  min-height: 1.5vw;
-  border: 0.15vw solid #777;
-  background-color: #fff;
-  border-radius: 0px 1.5vw 1.5vw 1.8vw;
-  padding: 1vw;
-  margin: 1.5vw 0;
-}
-body .card #message-section #user {
-  border: 1.5px solid #000;
-  border-radius: 1.5vw 0vw 1.5vw 1.8vw;
-  background-color: #000;
-  float: right;
-}
-body .card #message-section #user #user-response {
-  color: #fff;
-}
-body .card #message-section .message {
-  color: #000;
-  clear: both;
-  line-height: 1.2vw;
-  font-size: 1.2vw;
-  padding: 8px;
-  position: relative;
-  margin: 8px 0;
-  max-width: 85%;
-  word-wrap: break-word;
-  z-index: 2;
-}
-body .card #input-section {
-  z-index: 1;
-  padding: 0 2.5vw;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-end;
-  overflow: hidden;
-  height: 6vw;
-  width: 100%;
-}
-body .card #input-section input {
-  color: #000;
-  min-width: 0.5vw;
-  outline: none;
-  height: 5vw;
-  width: 26vw;
-  border-top: none;
-  border-left: none;
-  border-right: none;
-  border-bottom: solid #000 0.1vw;
-}
-body .card .send {
-  background: transparent;
-  border: 0;
-  cursor: pointer;
-  flex: 0 0 auto;
-  margin-left: 1.4vw;
-  margin-right: 0vw;
-  padding: 0;
-  position: relative;
-  outline: none;
-}
-body .card .send .circle {
-  position: relative;
-  width: 4.8vw;
-  height: 4.8vw;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-body .card .send .circle i {
-  font-size: 3vw;
-  margin-left: -1vw;
-  margin-top: 1vw;
-}
+    *{
+    font-size: 1.3vw;
+    font-family: "Epilogue", sans-serif;
+  }
+  
+  html {
+    --scrollbarBG: #fff;
+    --thumbBG: #90a4ae;
+  }
+  
+  body {
+    background: #ccc;
+  }
+  body .card {
+    height: 45vw;
+    width: 35vw;
+    background-color: white;
+    margin-left: 30vw;
+    margin-top: 5vw;
+    box-shadow: 2vw 2vw 12vw 3vw #ccc;
+  }
+  body .card #header {
+    height: 5vw;
+    background: #000;
+    padding: 0vw;
+  }
+  body .card #header h1 {
+    color: #fff;
+    font-size: 2vw;
+    font-family: "Finger Paint", cursive;
+    padding: 1vw;
+  }
+  body .card #message-section::-webkit-scrollbar {
+    width: 10px;
+  }
+  body .card #message-section {
+    height: 32vw;
+    padding: 0 2.5vw;
+    overflow-y: auto;
+    scrollbar-width: thin;
+    scrollbar-color: var(--thumbBG) var(--scrollbarBG);
+  }
+  body .card #message-section::-webkit-scrollbar-track {
+    background: var(--scrollbarBG);
+  }
+  body .card #message-section::-webkit-scrollbar-thumb {
+    background-color: var(--thumbBG);
+    border-radius: 6px;
+    border: 3px solid var(--scrollbarBG);
+  }
+  body .card #message-section #bot,
+  body .card #message-section #user {
+    position: relative;
+    bottom: 0;
+    min-height: 1.5vw;
+    border: 0.15vw solid #777;
+    background-color: #fff;
+    border-radius: 0px 1.5vw 1.5vw 1.8vw;
+    padding: 1vw;
+    margin: 1.5vw 0;
+  }
+  body .card #message-section #user {
+    border: 1.5px solid #000;
+    border-radius: 1.5vw 0vw 1.5vw 1.8vw;
+    background-color: #000;
+    float: right;
+  }
+  body .card #message-section #user #user-response {
+    color: #fff;
+  }
+  body .card #message-section .message {
+    color: #000;
+    clear: both;
+    line-height: 1.2vw;
+    font-size: 1.2vw;
+    padding: 8px;
+    position: relative;
+    margin: 8px 0;
+    max-width: 85%;
+    word-wrap: break-word;
+    z-index: 2;
+  }
+  body .card #input-section {
+    z-index: 1;
+    padding: 0 2.5vw;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    overflow: hidden;
+    height: 6vw;
+    width: 100%;
+  }
+  body .card #input-section input {
+    color: #000;
+    min-width: 0.5vw;
+    outline: none;
+    height: 5vw;
+    width: 26vw;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: solid #000 0.1vw;
+  }
+  body .card .send {
+    background: transparent;
+    border: 0;
+    cursor: pointer;
+    flex: 0 0 auto;
+    margin-left: 1.4vw;
+    margin-right: 0vw;
+    padding: 0;
+    position: relative;
+    outline: none;
+  }
+  body .card .send .circle {
+    position: relative;
+    width: 4.8vw;
+    height: 4.8vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  body .card .send .circle i {
+    font-size: 3vw;
+    margin-left: -1vw;
+    margin-top: 1vw;
+  }
   </style>
   <script>
     const userMessage = [
   ["hi", "hey", "hello"],
   ["sure", "yes", "no"],
-  ["are you genious", "are you nerd", "are you intelligent"],
-  ["i hate you", "i dont like you"],
-  ["how are you", "how is life", "how are things", "how are you doing"],
-  ["how is corona", "how is covid 19", "how is covid19 situation"],
-  ["what are you doing", "what is going on", "what is up"],
-  ["how old are you"],
-  ["who are you", "are you human", "are you bot", "are you human or bot"],
-  ["who created you", "who made you", "who is your creator"],
+  ["i am feeling worthless"],
+  ["what should i do in my life"],
+  ["i dont have any friends"],
+  ["nobody praises me", "life is miserable"],
+  ["i want to end my life"],
+  ["i am feeling stressful and low"],
+  ["i am ugly"],
+  ["everyone hates me"],
 
   [
     "your name please",
@@ -158,61 +158,52 @@ body .card .send .circle i {
     "what is your name",
     "what call yourself"
   ],
-  ["i love you"],
+  ["i am very sad and lonely"],
   ["happy", "good", "fun", "wonderful", "fantastic", "cool", "very good"],
-  ["bad", "bored", "tired"],
+  ["i am sad","sad"],
   ["help me", "tell me story", "tell me joke"],
   ["ah", "ok", "okay", "nice", "welcome"],
   ["thanks", "thank you"],
   ["what should i eat today"],
-  ["bro"],
+  ["i am having headache"],
   ["what", "why", "how", "where", "when"],
   ["corona", "covid19", "coronavirus"],
   ["you are funny"],
   ["i dont know"],
   ["boring"],
-  ["im tired"],
-  ["i am feeling nervous"]
-  ["i am feeling worthless"]
+  ["im tired"]
 ];
 const botReply = [
   ["Hello!", "Hi!", "Hey!", "Hi there!"],
   ["Okay"],
-  ["Yes I am! "],
-  ["I'm sorry about that. But I like you dude."],
+  ["don't worry, level up your esteem"],
+  ["go to our website and find interest of your choice "],
   [
-    "Fine... how are you?",
-    "Pretty well, how are you?",
-    "Fantastic, how are you?"
+    "don't worry you are you own best friend, don't think too much watch some netflix",
   ],
-  ["Getting better. There?", "Somewhat okay!", "Yeah fine. Better stay home!"],
+  ["you are doing great, i appreciate you", , " life is beautiful take one day at a time "],
 
   [
-    "Nothing much",
-    "About to go to sleep",
-    "Can you guess?",
-    "I don't know actually"
+    "this is extremely wrong , i am calling help for you,calling.............."
   ],
-  ["I am always young."],
-  ["I am just a bot", "I am a bot. What are you?"],
-  ["Sabitha Kuppusamy"],
+  ["go to our webpage of mental health , it will guide you a way to overcome it"],
+  ["you are strong and beautiful, never believe anything else"],
+  ["you are lovable, have faith , this too shall pass"],
   ["I am nameless", "I don't have a name"],
-  ["I love you too", "Me too"],
+  ["cheerup and have some ice crem"],
   ["Have you ever felt bad?", "Glad to hear it"],
-  ["Why?", "Why? You shouldn't!", "Try watching TV", "Chat with me."],
+  ["everthing will be alright"],
   ["What about?", "Once upon a time..."],
   ["Tell me a story", "Tell me a joke", "Tell me about yourself"],
   ["You're welcome"],
   ["Briyani", "Burger", "Sushi", "Pizza"],
-  ["Dude!"],
+  ["take a power nap then if it's persistent then see a doctor"],
   ["Yes?"],
   ["Please stay home"],
   ["Glad to hear it"],
   ["Say something interesting"],
   ["Sorry for that. Let's chat!"],
-  ["Take some rest, Dude!"],
-  ["relax,it will be fine"],
-  ["you are not. you just need to level up your self esteem. Talk to someone who loved you selflessly."]
+  ["Take some rest, Dude!"]
 ];
 
 const alternative = [
@@ -340,6 +331,7 @@ function addChat(input, product) {
   <div class="card">
     <div id="header">
       <h1>Chatter box!</h1>
+      <h3><a href="home.html">Exit</a></h3>
     </div>
     <div id="message-section">
       <div class="message" id="bot"><span id="bot-response">Hello.. I'm listening! Go on..</span></div>
@@ -352,5 +344,7 @@ function addChat(input, product) {
     </div>
   </div>
   <script src="script.js"></script>
+
+  
 </body>
 </html>
