--- a/health1.html
+++ b/health1.html
@@ -335,7 +335,7 @@ $('#next').click(function(){
                     <h3 class="card-title">CHAT BOT</h3>
                         <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="service-menu.html" class="btn mr-2"><i class="fas fa-link"></i> Visit Site</a>
+                    <a href="bot.html" class="btn mr-2"><i class="fas fa-link"></i> Visit Site</a>
                    
                   </div>
                   </div>
